# EvoAgentX

./: .env.example  .gitignore  404.html  API_DOCUMENTATION_CN.md  CONTRIBUTING.md  CONTRIBUTION.md  EvoAgentX_Weekly_Meeting.ics  LICENSE  PERFORMANCE_OPTIMIZATION_SUMMARY.md  Q&A--update at 2025-06-27  Q&A--update at 2025-06-27.docx  README-zh-TW.md  README-zh.md  README.md  caching_mechanism_example.py  combination_explosion_example.py  corrected_performance_analysis.py  index.html  installation.html  mkdocs.yml  objects.inv  performance_bottleneck_analysis.py  pyproject.toml  quickstart.html  rapidapi.py  real_performance_bottleneck_analysis.py  requirements.txt  setup.py  sitemap.xml  test_benchmark_methods.py  test_mcp_direct.py  test_mcp_github_simple.py  workflow_graph
evoagentx/: .env.example  Dockerfile  README.md  __init__.py  config.py  conftest.py  docker-compose.yml  fastapi_docs.md  pyproject.toml
evoagentx/actions/: __init__.py  action.py  agent_generation.py  code_extraction.py  code_verification.py  customize_action.py  task_planning.py  tool_caller_action.py  tool_caller_parser.py  tool_calling.py
evoagentx/agents/: __init__.py  action_agent.py  agent.py  agent_generator.py  agent_manager.py  cus_tool_caller.py  customize_agent.py  long_term_memory_agent.py  task_planner.py  tool_caller.py  workflow_reviewer.py
evoagentx/app/: .env.example  README.md  api copy.py  api generator.py  api.py  api_agent.py  api_back2.py  api_baup.py  api_new_class.py  backbone.py  config.py  db.py  main.py  prompts.py  requirements.txt  sample_app.env  schemas.py  security.py  services copy.py  services generator.py  services.py  services_agent.py  services_back2.py  services_baup.py  services_new_class.py  shared.py
evoagentx/benchmark/: README.md  WorfBench.py  __init__.py  benchmark.py  bigbenchhard.py  gsm8k.py  hotpotqa.py  humaneval.py  livecodebench.py  math.py  mbpp.py  measures.py  nq.py  real_mm_rag.py
evoagentx/core/: __init__.py  base_config.py  callbacks.py  decorators.py  logging.py  message.py  module.py  module_utils.py  parser.py  registry.py
evoagentx/evaluators/: __init__.py  aflow_evaluator.py  evaluator.py  mipro_evaluator.py
evoagentx/hitl/: __init__.py  approval_manager.py  hitl.py  hitl_gui.py  interceptor_agent.py  special_hitl_agent.py  workflow_editor.py
evoagentx/memory/: __init__.py  long_term_memory.py  memory.py  memory_manager.py
evoagentx/models/: __init__.py  aliyun_model.py  base_model.py  litellm_model.py  model_configs.py  model_utils.py  openai_mcp.py  openai_model.py  openrouter_model.py  siliconflow_model.py  siliconflow_model_cost.py  test.py
evoagentx/optimizers/: __init__.py  aflow_optimizer.py  evo2_optimizer.py  evoprompt_optimizer.py  example_optimizer.py  map_elites_optimizer.py  mass_optimizer.py  mipro_optimizer.py  mipro_optimizer_v2.py  optimizer.py  optimizer_core.py  sem_optimizer.py  sew_optimizer.py  textgrad_optimizer.py
evoagentx/prompts/: __init__.py  agent_generator.py  code_extraction.py  context_extraction.py  operators.py  output_format.py  task_planner.py  template.py  tool_caller.py  tool_calling.py  utils.py  workflow_manager.py
evoagentx/rag/: rag.py  (+7 more)
(+825 files in other folders)
